# market-bot

./: .gitignore  LICENSE  launch.bat  launch.py  launch.sh  package.json  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py
backend/app/adapters/apollo/: __init__.py  adapter.py
backend/app/api/: server.py
backend/app/core/: database.py  diagnostics.py  logging.py  paths.py  runtime.py  settings.py
backend/app/domain/: __init__.py  enums.py  models.py  transitions.py
backend/app/migrations/: __init__.py  registry.py
backend/app/repositories/: __init__.py  audit.py  base.py  builder.py  campaigns.py  execution.py  leads.py  queue.py  studio.py  warehouse.py
backend/app/services/: __init__.py  campaign_builder.py  campaigns.py  execution.py  lead_warehouse.py  queue.py  replies.py  template_studio.py
backend/app/tests/: support.py  test_campaign_builder.py  test_execution_engine.py  test_lead_warehouse.py  test_migrations.py  test_services.py  test_template_studio.py
backend/app/workers/: main.py
backend/launcher/: __init__.py  main.py
config/: settings.example.json  settings.json
dev/: specs.txt  sprints.txt
frontend/static/: index.html
frontend/static/assets/css/: app.css
frontend/static/assets/js/: app.js
frontend/tests/: static-shell.test.mjs
scripts/: validate-static.mjs
