[project]
name = "market-bot"
version = "0.6.0"
description = "Portable local-first outbound marketing workstation with Sprint 6 restart-safe execution tooling"
requires-python = ">=3.12"

[tool.market-bot]
sprint = "5"
stack_rationale = "dependency-free sprint-6 execution engine with restart-safe claims, retries, and dead-letter visibility"
